--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,7 @@ parrafo de la descripcion
   padding: 5%;
   margin-top: 5%;
   margin-bottom: 5%;
+  justify-content: center;
 }
 
 /*----------------------------------------
